<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QueueDisplay</string>
    <string name="title_activity_setting">Setting</string>
    <string name="action_settings">Settings</string>
    <string name="shop_id">Shop ID</string>
    <string name="ip_address">IP Address</string>
    <string name="web_service">Web Service</string>
    <string name="vdo_dir">Video Dir</string>
    <string name="enable_tw_queue">Enable take away queue</string>
    <string name="add">Add</string>
    <string name="information_text">Information text</string>
    <string name="port">Port</string>
    <string name="col_no">#</string>
    <string name="name">Name</string>
    <string name="wait">Wait</string>
    <string name="status">Status</string>
    <string name="pickup_queue">Pickup Queue</string>
    <string name="table_queue">Table Queue</string>
    <string name="connection">Connection</string>
    <string name="queue">Queue</string>
    <string name="url">URL</string>
    <string name="refresh">Refresh</string>
    <string name="backoffice_url">Backoffice URL</string>
    <string name="refresh_interval">Refresh Interval</string>
    <string name="general">General</string>
    <string name="resource">Resource</string>
    <string name="video_directory">Directory of video file</string>
    <string name="enable_table_queue">Enable Table Queue</string>
    <string name="enable_queue">Enable Queue</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="hello_world">Hello world!</string>
	<string name="software_info">© 2013 All Rights Reserved. Synature Technology Co., Ltd.\n 
	55/165 M.Banklangmuang, Soi Ladprao 88, Ladprao Rd.\n Wangthonglang, Bangkok, Thailand. 10310\n
	Tel: +66(0)-2-530-3835-6 Fax: +66(0)-2-530-3092\n E-mail: info@synaturegroup.com</string>
	<string name="about">About</string>
	<string name="device_code">Device Code :</string>
	<string name="exit_program">Exit Program</string>
	<string name="select_logo">Select Logo</string>
	<string name="manage_logo">Manage Logo</string>
	<string name="save">Save</string>
	<string name="save_logo_success">Save logo successfully.</string>
	<string name="close">Close</string>
	<string name="delete">Delete</string>
	<string name="delete_success">Delete file successfully.</string>
	<string name="confirm_delete_file">Are you sure you want to delete file?</string>
	<string name="sound_dir">Sound Dir</string>
	<string name="sound_directory">Directory of sound</string>
	<string name="calling_times">Calling Times</string>
	<string name="queue_column">Queue Column</string>
	<string name="queue_column_summary">Number of queue columns</string>
</resources>
